package edu.hitsz.strategy;

public class HeroProBulletStrategy {

}
