@startuml graph
abstract class AbstractAircraft {
    # maxHp: int
    # hp: int
    # bulletStrategy: BulletStrategy

    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease): void
    + increaseHp(int increase): void
    + getHp(): int
    + setBulletStrategy(BulletStrategy bulletStrategy): void
    + abstract shoot(): List<BaseBullet>
}

interface AbstractBulletStrategy {
    + abstract fire(AbstractAircraft aircraft):List<BaseBullet>
}

class NoBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class SingleBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class DoubleBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class TripleBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class HeroBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class HeroPlusBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class HeroProBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class BossBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
AbstractBulletStrategy <--o AbstractAircraft

AbstractBulletStrategy <|.. NoBulletStrategy
AbstractBulletStrategy <|.. SingleBulletStrategy
AbstractBulletStrategy <|.. DoubleBulletStrategy
AbstractBulletStrategy <|.. TripleBulletStrategy
AbstractBulletStrategy <|.. HeroBulletStrategy
AbstractBulletStrategy <|.. HeroPlusBulletStrategy
AbstractBulletStrategy <|.. HeroProBulletStrategy
AbstractBulletStrategy <|.. BossBulletStrategy

@enduml